fix: Files: actions row layout (center vertical align)

--- a/styles/pages/files.scss
+++ b/styles/pages/files.scss
@@ -93,14 +93,16 @@
 // Header when item picked
 // -----------------
 .header-options {
+  display: flex;
+  align-items: center;
   height: 19px;
 
   &__item {
-    font-weight: normal;
-    font-size: 13px;
-    display: inline-block;
-    padding-right: 10px;
+    display: inline-flex;
     min-width: 40px;
+    padding-right: 10px;
+    font-size: 13px;
+    font-weight: normal;
     vertical-align: middle;
 
     @media (max-width: $screen-xs-max) {
@@ -109,8 +111,8 @@
     }
   }
 
-  .glyphicon-pencil {
-    font-size: 13px;
+  .glyphicon {
+    align-self: center;
   }
 }
 
